--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "react-next-landing",
-  "description": "Modern Multipurpose Landing Pages Template Using React, Next, Styled Components and so on. It also support Gatsby Static site generator ",
+  "description": "YoPack soluciones en logistica",
   "version": "3.2.0",
   "private": true,
-  "author": "RedQ Team",
+  "author": "YoPack",
   "license": "",
   "repository": {
     "type": "git",
